--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~bootstrap/dist/css/bootstrap.min.css';
+@import url('https://fonts.googleapis.com/css?family=PT+Serif:400,700');
+
+body, html{
+  height: 100%;
+  background: #000000;
+  font-family: 'PT Serif' , 'Arial';
+  color: #fff;
+}
+
+ul{
+  list-style-type: none;
+  margin: 0 0 2em 0;
+  padding: 3em 3em 0 3em;
+}
+
+ul li{
+  display: inline;
+  margin-right: 30px;
+}
+
+ul li a{
+  font-size: 2em;
+}
+
+a{
+  color: #fff;
+  text-decoration: none;
+}
+a:hover{
+  text-decoration: none;
+  color: red;
+}
