--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
   </p>
 </div>
 
-  <div class="row blocks" [@blockPhotos]="state">
+  <div class="row blocks" [@blockPhotos]>
       <img class="block1 col-xs-12 col-sm-4" src="/assets/yuvraj-singh-425756-unsplash.jpg" />
       <img class="block2 col-xs-12 col-sm-4"src="/assets/jacob-spence-392804-unsplash.jpg"  />
       <img class="block3 col-xs-12 col-sm-4" src="/assets/david-straight-37577-unsplash.jpg" />
