--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,7 @@
   <li><a routerLink="">Home</a></li>
   <li><a routerLink="about">About</a></li>
 </ul>
-
+<div class="logo text-center">
+  <img src="assets/logo.png" />
+</div>
 <router-outlet></router-outlet>
