--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,7 @@ body, html{
 }
 
 ul{
+  display: inline;
   list-style-type: none;
   margin: 0 0 2em 0;
   padding: 3em 3em 0 3em;
@@ -21,7 +22,7 @@ ul li{
 }
 
 ul li a{
-  font-size: 2em;
+  font-size: 1.7em;
 }
 
 a{
