--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,6 @@
   <li><a routerLink="about">About</a></li>
 </ul>
 <div class="logo text-center">
-  <img src="assets/logo.png" />
+  <img src="assets/logo.jpg" />
 </div>
 <router-outlet></router-outlet>
