change logo location

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,7 @@
+<div class="logo text-center">
+  <img src="assets/logo.jpg" />
+</div>
+
 <div class="about-photo">
   <div class="offset-sm-6 col-sm-6">
     <h2 class="about-title">About this site</h2>
