--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,7 @@
+<div class="logo text-center">
+  <img src="assets/logo.jpg" />
+</div>
+
 <div class="parallax"></div>
 
 <div class="jumbotron quotes">
