--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,3 +33,11 @@ a:hover{
   text-decoration: none;
   color: red;
 }
+
+.logo{
+  display: inline;
+  margin-left: 25%;
+  img{
+    height: 200px;
+  }
+}
