--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
-<div class="logo text-center">
+<!-- <div class="logo text-center">
   <img src="assets/logo.jpg" />
-</div>
+</div> -->
 
 <div class="parallax"></div>
 
