try to add logo again

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,6 @@
-<!-- <div class="logo text-center">
+<div class="logo text-center">
   <img src="assets/logo.jpg" />
-</div> -->
+</div>
 
 <div class="about-photo">
   <div class="offset-sm-6 col-sm-6">
